TEST/EXCEPT-tests/exception_test_006.spin2
PUB go()

DAT

  long 0[$3FFF0]
